Make the code cleaner